--- a/youtubeNg/src/app/container/search-bar/search-bar.component.html
+++ b/youtubeNg/src/app/container/search-bar/search-bar.component.html
@@ -2,13 +2,13 @@
     <input type="search" 
            id="search" 
            class="form-control rounded" 
-           placeholder="Rechercher" 
+           placeholder="Rechercher par titre" 
            aria-label="Search" 
            aria-describedby="search-addon" 
            [(ngModel)]="valueInputSearched"
     />
     <button type="button" 
-            class="btn btn-outline-primary" 
+            class="btn btn-outline-success rounded" 
             (click) = "sendSearchedValue()"
     >
             Valider
